# bazel-diff-targets

./: .gitignore  BUILD.bazel  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  MODULE.bazel  README.md  THIRD_PARTY_NOTICES.md  TODO.md  package.json  release-please-config.json
.github/: renovate.json
.github/workflows/: ci.yaml
src/: args.rs  error.rs  git.rs  main.rs
src/git/: backend.rs  cli_backend.rs  mod.rs  tests.rs
