[package]
name = "bazel-diff-targets"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI for computing impacted Bazel targets between Git refs."
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[[bin]]
name = "bazel-diff-targets"
path = "src/main.rs"
